OPSEXP-699: Update documentation (#103)